--- a/login.css
+++ b/login.css
@@ -1,4 +1,4 @@
-.login {
+/* .login {
     background-color: white;
     height: 100vh;
     display: flex;
@@ -72,4 +72,4 @@ body{
     margin-top: 10px;
     border-color: darkgray;
   }
-  
+   */
